--- a/index.html
+++ b/index.html
@@ -2,28 +2,31 @@
 
 <html lang="en">
 	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-		<meta name="description" content="Good evening from the land of dreams.">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="theme-color" content="#000000">
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
+		<meta name="description" content="Good evening from the land of dreams." />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="theme-color" content="#000000" />
 
 		<title>land of dreams</title>
-		
-		<link rel="preload" as="style" href="./css/style.css">
-		<link rel="stylesheet" href="./css/style.css">
-		<link rel="preload" href="./fonts/apfelgrotezk.woff2" as="font" crossorigin>
-		<link rel="preload" href="./fonts/kosugimaru.woff2" as="font" crossorigin>
-		<link rel="preload" href="./img/bg.webp" as="image">
-		<link rel="preload" as="script" href="./js/app.js">
+
+		<link rel="preload" as="style" href="./css/style.css" />
+		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preload" href="./fonts/apfelgrotezk.woff2" as="font" crossorigin />
+		<link rel="preload" href="./fonts/kosugimaru.woff2" as="font" crossorigin />
+		<link rel="preload" href="./img/bg.webp" as="image" />
+		<link rel="preload" as="script" href="./js/app.js" />
 		<script defer src="./js/app.js"></script>
-		<link rel="icon" href="./favicon.ico" sizes="any">
+		<link rel="icon" href="./favicon.ico" sizes="any" />
 	</head>
 
 	<body>
 		<header>
 			<span class="parallax" data-depth="1.075">pixel</span>
-			<span class="parallax" data-depth="1.025"><span style="color:#ff9a9a">d</span><span style="color:#ffc694">a</span><span style="color:#ffff93">s</span><span style="color:#96ff96">h</span><span style="color:#a0a0ff">e</span><span style="color:#ff93f8">r</span></span>
+			<span class="parallax" data-depth="1.025"
+				><span style="color: #ff9a9a">d</span><span style="color: #ffc694">a</span><span style="color: #ffff93">s</span
+				><span style="color: #96ff96">h</span><span style="color: #a0a0ff">e</span><span style="color: #ff93f8">r</span></span
+			>
 		</header>
 
 		<main>
