--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 		<title>land of dreams</title>
 
-		<link rel="preload" as="style" href="./css/style.css" />
-		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preload" as="style" href="./css/style.min.css" />
+		<link rel="stylesheet" href="./css/style.min.css" />
 		<link rel="preload" href="./fonts/apfelgrotezk.woff2" as="font" crossorigin />
 		<link rel="preload" href="./fonts/kosugimaru.woff2" as="font" crossorigin />
 		<link rel="preload" href="./img/bg.webp" as="image" />
-		<link rel="preload" as="script" href="./js/app.js" />
-		<script defer src="./js/app.js"></script>
+		<link rel="preload" as="script" href="./js/app.min.js" />
+		<script defer src="./js/app.min.js"></script>
 		<link rel="icon" href="./favicon.ico" sizes="any" />
 	</head>
 
